c4prj2_input/grade.txt
Grading at Thu Aug  1 16:12:01 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:49:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return EXIT_FAILURE;
            ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
